refactored to use Generic LLM with RestClient